traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:33: error: type mismatch;
 found   : Unit
 required: Boolean
    if (a = 0) {
          ^