traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  
    
  def posFinal() : Boolean =  {
    
    var H = getMondeHauteur()-1;
  	var L = getMondeLargeur()-1;
        
    if ((getX() == L) && (getY() == H)) {
      return true
    }
    return false
    
  }
  
  var cpt = 0
  var a = 0
  
  while(!posFinal()) {
    
    ecritMessage(cpt);
    
    if (getY() == getMondeHauteur()-1) {
      
      setPos(getX()+1, getMondeHauteur-1)
      a = 1
      
    } else if ((getY() == 0) && (getX() != 0)) {
      
      setX(getX()+1)
      a = 0
      
    }
    if (a = 0) {
  
      setY(getY()+1)
    
    } else {
    
    	setY(getY()-1)
    
  	}
    
    
    cpt += 1
       
  }
  ecritMessage(cpt)


}